Moved the project filles from other repository

--- a/PLPlayersAPI/PLPlayersAPI.csproj
+++ b/PLPlayersAPI/PLPlayersAPI.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>ca785d12-3e03-4bb8-bcf6-aef27b100237</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
